# docker-predictalot

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Dockerfile.dev  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-sundial.txt
.github/workflows/: pipeline.yml
benchs/: run.py
docs/: accuracy.md  architecture.md  configuration.md  errors.md  mcp.md  tabular.md  timeseries.md
scripts/: compile-deps.sh  deps.in
src/predictalot/: __init__.py  __main__.py  auth.py  config.py  device.py  dispatch.py  duration.py  fetch.py  logging.py  mcp_server.py  server.py  size.py  storage.py  tabular_features.py  tabular_storage.py  types.py
src/predictalot/models/: __init__.py  base.py  chronos2.py  hist_gbt_be.py  knn_be.py  lightgbm_be.py  logistic_be.py  mlp_be.py  moirai2.py  naive_bayes_be.py  random_forest_be.py  sundial.py  svm_rbf_be.py  tabular_base.py  timesfm25.py  toto1.py  xgboost_be.py
src/predictalot/routers/: _common.py  covariates.py  covariates_future.py  covariates_past.py  forecast.py  meta.py  multivariate.py  samples.py  schemas.py  tabular.py  tabular_meta.py  tabular_schemas.py  univariate.py
sundial_worker/: server.py
tests/: conftest.py  test_auth.py  test_body_limit.py  test_covariates.py  test_covariates_future.py  test_covariates_past.py  test_duration.py  test_fm_extra_passing.py  test_forecast_chronos2.py  test_forecast_ensemble.py  test_forecast_moirai2.py  test_forecast_sundial.py  test_forecast_timesfm25.py  test_forecast_toto1.py  test_meta.py  test_multivariate.py  test_samples.py  test_size.py  test_storage.py  test_tabular_backends.py  test_tabular_ensemble.py  test_tabular_features.py  test_tabular_meta.py  test_tabular_router.py  test_tabular_storage.py  test_timeseries_paths.py  test_univariate.py  test_univariate_ensemble.py
tests/integration/: conftest.py  test_fm_extra_live.py  test_forecast_live.py  test_tabular_live.py  test_tabular_meta_live.py
